--- a/front_end/panels/ai_assistance/selectWorkspaceDialog.css
+++ b/front_end/panels/ai_assistance/selectWorkspaceDialog.css
@@ -74,3 +74,9 @@ li.selected {
     color: var(--app-color-navigation-drawer-label-selected);
   }
 }
+
+.ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
